smap man page added.  Minor bug fixes in smap.

--- a/trunk/doc/man/Makefile.am
+++ b/trunk/doc/man/Makefile.am
@@ -7,7 +7,8 @@ man1_MANS =            \
 	man1/scontrol.1\
 	man1/sinfo.1   \
 	man1/squeue.1  \
-	man1/srun.1 
+	man1/srun.1 \
+	man1/smap.1   
 
 man3_MANS = man3/slurm_hostlist_create.3 \
 	man3/slurm_hostlist_destroy.3 \
