--- a/trunk/src/plugins/select/bluegene/bluegene.conf
+++ b/trunk/src/plugins/select/bluegene/bluegene.conf
@@ -1,9 +1,9 @@
-
 # Sample Bluegene/L plugin configuration file.  See README for
-# description.  the BGL parititon nodes must match preconfigured SLURM
-# partitions.
+# description.  The BGL parititon nodes must match preconfigured SLURM
+# partitions. Default value for Type is Mesh. Default value for Use 
+# is Coprocessor.
 
-Nodes=bgl[400x511] Type=Mesh
-Nodes=bgl[600x711] Type=Torus
-Nodes=bgl[422x531] Type=Torus
-Nodes=bgl[622x731] Type=Mesh
+Nodes=bgl[400x511] Type=Mesh Use=Virtual
+Nodes=bgl[600x711] Type=Torus Use=Virtual
+Nodes=bgl[422x531] Type=Torus Use=Coprocessor
+Nodes=bgl[622x731] Type=Mesh Use=Coprocessor
