Add new m4 script to Makefile.am.

--- a/trunk/auxdir/Makefile.am
+++ b/trunk/auxdir/Makefile.am
@@ -14,6 +14,7 @@ EXTRA_DIST = \
     x_ac_debug.m4 \
     x_ac_elan.m4 \
     x_ac_gpl_licensed.m4 \
+    x_ac_ncurses.m4 \
     x_ac_ptrace.m4 \
     x_ac_readline.m4 \
     x_ac_setproctitle.m4 \
