made partition_allocator into a .la for easy mobility

--- a/trunk/src/partition_allocator/Makefile.am
+++ b/trunk/src/partition_allocator/Makefile.am
@@ -5,22 +5,42 @@ AUTOMAKE_OPTIONS = foreign
 
 INCLUDES = -I$(top_srcdir) 
 
-bin_PROGRAMS = partition_allocator
+#bin_PROGRAMS = partition_allocator
 
-partition_allocator_SOURCES = partition_allocator.c partition_allocator.h \
-                       graph_solver.c graph_solver.h \
-                       graph_structs.c graph_structs.h 
+#partition_allocator_SOURCES = partition_allocator.c partition_allocator.h \
+#                       graph_solver.c graph_solver.h \
+#                       graph_structs.c graph_structs.h 
 
-partition_allocator_LDADD = \
-	$(top_builddir)/src/common/libcommon.la \
-	$(top_builddir)/src/common/list.o \
-	$(top_builddir)/src/common/xmalloc.o
+#partition_allocator_LDADD = \
+#	$(top_builddir)/src/common/libcommon.la 
 
-partition_allocator_LDFLAGS = -export-dynamic -lm $(CMD_LDFLAGS)
+#partition_allocator_LDFLAGS = -export-dynamic -lm $(CMD_LDFLAGS)
 
-force:
-$(convenience_libs) : force
-	@cd `dirname $@` && $(MAKE) `basename $@`
+
+#making a .la
+lib_LTLIBRARIES = libpartition_allocator.la 
+
+libpartition_allocator_la_SOURCES =    \
+	partition_allocator.c partition_allocator.h\
+	graph_solver.c graph_solver.h\
+        graph_structs.c	graph_structs.h
+
+libpartition_allocator_la_LIBADD  =  $(top_builddir)/src/common/libcommon.la -lpthread
+
+libpartition_allocator_la_LDFLAGS        = \
+	$(LIB_LDFLAGS)  -lm    
+
+libpartition_allocator_la_DEPENDENCIES  = \
+	$(top_builddir)/src/common/libcommon.la 
+
+#####
+
+#force:
+#$(convenience_libs) : force
+#	@cd `dirname $@` && $(MAKE) `basename $@`
+
+
+#########
 
 # attach.o : attach.c
 # 	$(COMPILE) -c -g -o attach.o $(srcdir)/attach.c 
