Remove report.pdf as part of "make clean"

--- a/trunk/doc/bgl.report/Makefile
+++ b/trunk/doc/bgl.report/Makefile
@@ -52,5 +52,5 @@ view: $(REPORT).ps
 	ghostview $(REPORT) &
 
 clean: 
-	rm -f *~ *.dvi *.log *.aux $(REPORT).ps *.blg *.bbl #*.eps #*.gif *.ps
+	rm -f *~ *.dvi *.log *.aux $(REPORT).pdf $(REPORT).ps *.blg *.bbl #*.eps #*.gif *.ps
 	      
