--- a/trunk/src/partition_allocator/Makefile.am
+++ b/trunk/src/partition_allocator/Makefile.am
@@ -5,6 +5,7 @@ AUTOMAKE_OPTIONS = foreign
 
 INCLUDES = -I$(top_srcdir) 
 
+# to build the executable
 bin_PROGRAMS = partition_allocator
 
 partition_allocator_SOURCES = partition_allocator.c partition_allocator.h \
@@ -16,24 +17,22 @@ partition_allocator_LDADD = \
 
 partition_allocator_LDFLAGS = -export-dynamic -lm $(CMD_LDFLAGS)
 
+# making a .la
+# lib_LTLIBRARIES = libpartition_allocator.la 
+# libpartition_allocator_la_SOURCES =    \
+# 	partition_allocator.c partition_allocator.h\
+# 	graph_solver.c graph_solver.h\
+#         graph_structs.c	graph_structs.h
 
-#making a .la
-lib_LTLIBRARIES = libpartition_allocator.la 
+# libpartition_allocator_la_LIBADD  =  $(top_builddir)/src/common/libcommon.la -lpthread
 
-libpartition_allocator_la_SOURCES =    \
-	partition_allocator.c partition_allocator.h\
-	graph_solver.c graph_solver.h\
-        graph_structs.c	graph_structs.h
+# libpartition_allocator_la_LDFLAGS        = \
+# 	$(LIB_LDFLAGS)  -lm    
 
-libpartition_allocator_la_LIBADD  =  $(top_builddir)/src/common/libcommon.la -lpthread
+# libpartition_allocator_la_DEPENDENCIES  = \
+# 	$(top_builddir)/src/common/libcommon.la 
 
-libpartition_allocator_la_LDFLAGS        = \
-	$(LIB_LDFLAGS)  -lm    
-
-libpartition_allocator_la_DEPENDENCIES  = \
-	$(top_builddir)/src/common/libcommon.la 
-
-#####
+####
 
 #force:
 #$(convenience_libs) : force
