removed my stupid comment

--- a/trunk/src/plugins/select/bluegene/bluegene.conf
+++ b/trunk/src/plugins/select/bluegene/bluegene.conf
@@ -3,7 +3,7 @@
 # partitions. Default value for Type is Mesh. Default value for Use 
 # is Coprocessor.
 
-Nodes=bgl[400x511] Type=Mesh Use=Virtual
+Nodes=bgl[400x511] Type=Mesh Use=Virtual NodeIDs=400,401,410,411 PortConfigs=035/412,035/412,035/412,035/412
 Nodes=bgl[600x711] Type=Torus Use=Virtual
 Nodes=bgl[422x531] Type=Torus Use=Coprocessor
 Nodes=bgl[622x731] Type=Mesh Use=Coprocessor
