correct makefile.am

--- a/trunk/src/partition_allocator/Makefile.am
+++ b/trunk/src/partition_allocator/Makefile.am
@@ -1,21 +1,21 @@
 # $Id$
 # Makefile.am for graph_solver
 
-AUTOMAKE_OPTIONS = foreign
+# AUTOMAKE_OPTIONS = foreign
 
-INCLUDES = -I$(top_srcdir) 
+# INCLUDES = -I$(top_srcdir) 
 
-# to build the executable
-bin_PROGRAMS = partition_allocator
+# # to build the executable
+# bin_PROGRAMS = partition_allocator
 
-partition_allocator_SOURCES = partition_allocator.c partition_allocator.h \
-                       graph_solver.c graph_solver.h \
-                       graph_structs.c graph_structs.h 
+# partition_allocator_SOURCES = partition_allocator.c partition_allocator.h \
+#                        graph_solver.c graph_solver.h \
+#                        graph_structs.c graph_structs.h 
 
-partition_allocator_LDADD = \
-	$(top_builddir)/src/common/libcommon.la 
+# partition_allocator_LDADD = \
+# 	$(top_builddir)/src/common/libcommon.la 
 
-partition_allocator_LDFLAGS = -export-dynamic -lm $(CMD_LDFLAGS)
+# partition_allocator_LDFLAGS = -export-dynamic -lm $(CMD_LDFLAGS)
 
 # making a .la
 lib_LTLIBRARIES = libpartition_allocator.la 
