--- a/trunk/src/plugins/select/bluegene/Makefile.am
+++ b/trunk/src/plugins/select/bluegene/Makefile.am
@@ -6,7 +6,7 @@ AUTOMAKE_OPTIONS = foreign
 
 PLUGIN_FLAGS = -module -avoid-version --export-dynamic -lm
 
-INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common $(BGL_INCLUDES)
 
 pkglib_LTLIBRARIES = select_bluegene.la
 
@@ -14,7 +14,7 @@ pkglib_LTLIBRARIES = select_bluegene.la
 select_bluegene_la_SOURCES = select_bluegene.c \
 				bluegene.c bluegene.h \
 				partition_sys.c partition_sys.h
-select_bluegene_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS) 
+select_bluegene_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS) $(BGL_LDFLAGS)
 
 if HAVE_AIX
   select_bluegene_la_LIBADD  = $(top_builddir)/src/common/libcommon.la
