Include BGL required libraries within slurmctld executable so that select/bluegene can resolve BGL API symbols.

--- a/trunk/src/plugins/select/bluegene/Makefile.am
+++ b/trunk/src/plugins/select/bluegene/Makefile.am
@@ -14,7 +14,7 @@ pkglib_LTLIBRARIES = select_bluegene.la
 select_bluegene_la_SOURCES = select_bluegene.c \
 				bluegene.c bluegene.h \
 				partition_sys.c partition_sys.h
-select_bluegene_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS) $(BGL_LDFLAGS)
+select_bluegene_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
 
 if HAVE_AIX
   select_bluegene_la_LIBADD  = $(top_builddir)/src/common/libcommon.la
