Update documentation for bluegene.conf, added "Serial=" info. Some cosmetic cleanup (long lines mostly).

--- a/trunk/src/plugins/select/bluegene/bluegene.conf
+++ b/trunk/src/plugins/select/bluegene/bluegene.conf
@@ -1,7 +1,9 @@
 # Sample Bluegene/L plugin configuration file.  See README for
 # description.  The BGL parititon nodes must match preconfigured SLURM
-# partitions. Default value for Type is Mesh. Default value for Use 
-# is Coprocessor.
+# partitions exactly (e.g. "bgl[000x001]" != "bgl[000,001]". Default 
+# value for Type is Mesh. Default value for Use is Coprocessor.
+
+Serial=BGL
 
 Nodes=bgl[400x511] Type=Mesh Use=Virtual NodeIDs=400,401,410,411 PortConfigs=035/412,035/412,035/412,035/412
 Nodes=bgl[600x711] Type=Torus Use=Virtual
