--- a/trunk/etc/slurm.conf.example
+++ b/trunk/etc/slurm.conf.example
@@ -116,7 +116,8 @@
 # SlurmdLogFile=/var/log/slurmd.log        # default is to log via syslog()
 
 
-# o Define an alternate location for slurmd and slurmctld pid files
+# o Define an alternate location for slurmd and slurmctld pid files, 
+#   SlurmctldPidFile and SlurmdPidFile should have different values
 #  
 #    "SlurmctldPidFile" : fully qualified pathname containing slurmctld pid
 #
