--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -163,6 +163,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/slurm/jobcomp_script.so
 %{_libdir}/slurm/sched_backfill.so
 %{_libdir}/slurm/sched_builtin.so
+%{_libdir}/slurm/sched_hold.so
 %{_libdir}/slurm/select_linear.so
 %{_libdir}/slurm/switch_none.so
 %dir %{_libdir}/slurm/src
@@ -241,6 +242,8 @@ fi
 
 
 %changelog
+* Tue Nov 16 2004 Morris Jette <jette1@llnl.gov>
+- Added sched_hold plugin
 * Wed Oct 13 2004 Morris Jette <jette1@llnl.gov>
 - added new package "bluegene" for select_bluegene.so
 * Thu Sep 29 2004 Morris Jette <jette1@llnl.gov>
