--- a/trunk/src/plugins/select/bluegene/bluegene.conf
+++ b/trunk/src/plugins/select/bluegene/bluegene.conf
@@ -3,9 +3,22 @@
 # partitions exactly (e.g. "bgl[000x001]" != "bgl[000,001]". Default 
 # value for Type is Mesh. Default value for Use is Coprocessor.
 
+BlrtsImage=/bgl/edi/build/bglsys/bin/rts_hw.rts
+LinuxImage=/bgl/edi/build/bglsys/bin/zImage.elf
+MloaderImage=/bgl/edi/build/bglsys/bin/mmcs-mloader.rts
+RamDiskImage=/bgl/edi/build/bglsys/bin/ramdisk.elf
 Serial=BGL
 
-Nodes=bgl[400x511] Type=Mesh Use=Virtual NodeIDs=400,401,410,411 PortConfigs=035/412,035/412,035/412,035/412
-Nodes=bgl[600x711] Type=Torus Use=Virtual
-Nodes=bgl[422x531] Type=Torus Use=Coprocessor
-Nodes=bgl[622x731] Type=Mesh Use=Coprocessor
+# volume = 1x1x1 = 1
+Nodes=bgl[000x000] Type=Mesh
+Nodes=bgl[001x001] Type=Mesh
+Nodes=bgl[010x010] Type=Mesh
+Nodes=bgl[011x011] Type=Mesh
+
+# volume = 1x1x2 = 2
+Nodes=bgl[020x021] Type=Mesh
+Nodes=bgl[030x031] Type=Mesh
+Nodes=bgl[002x003] Type=Mesh
+Nodes=bgl[012x013] Type=Mesh
+Nodes=bgl[022x023] Type=Mesh
+Nodes=bgl[032x033] Type=Mesh
