--- a/trunk/src/partition_allocator/Makefile.am
+++ b/trunk/src/partition_allocator/Makefile.am
@@ -8,23 +8,24 @@ INCLUDES = -I$(top_srcdir)
 #to build the executable
 # bin_PROGRAMS = partition_allocator
 
-# partition_allocator_SOURCES = partition_allocator.c partition_allocator.h \
-#                        graph_solver.c graph_solver.h \
-#                        graph_structs.c graph_structs.h 
+# partition_allocator_SOURCES = partition_allocator.c partition_allocator.h
 
 # partition_allocator_LDADD = \
-# 	$(top_builddir)/src/common/libcommon.la 
+# 	$(top_builddir)/src/common/libcommon.la -lpthread \
+# 	$(top_builddir)/src/api/libslurm.la
 
 # partition_allocator_LDFLAGS = -export-dynamic -lm $(CMD_LDFLAGS)
 
 # making a .la
 lib_LTLIBRARIES = libpartition_allocator.la 
 libpartition_allocator_la_SOURCES =    \
-	partition_allocator.c partition_allocator.h\
-	graph_solver.c graph_solver.h\
-        graph_structs.c	graph_structs.h
+	partition_allocator.c partition_allocator.h
+# 	graph_solver.c graph_solver.h\
+#         graph_structs.c	graph_structs.h
 
-libpartition_allocator_la_LIBADD  =  $(top_builddir)/src/common/libcommon.la -lpthread
+libpartition_allocator_la_LIBADD  =  \
+	$(top_builddir)/src/common/libcommon.la -lpthread \
+	$(top_builddir)/src/api/libslurm.la
 
 libpartition_allocator_la_LDFLAGS        = \
 	$(LIB_LDFLAGS)  -lm    
