--- a/trunk/src/plugins/select/bluegene/Makefile.am
+++ b/trunk/src/plugins/select/bluegene/Makefile.am
@@ -13,6 +13,7 @@ pkglib_LTLIBRARIES = select_bluegene.la
 # Blue Gene node selection plugin.
 select_bluegene_la_SOURCES = select_bluegene.c \
 				bluegene.c bluegene.h \
+				state_test.c state_test.h \
 				partition_sys.c partition_sys.h
 select_bluegene_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
 
