--- a/trunk/src/plugins/select/bluegene/Makefile.am
+++ b/trunk/src/plugins/select/bluegene/Makefile.am
@@ -12,6 +12,7 @@ pkglib_LTLIBRARIES = select_bluegene.la
 
 # Blue Gene node selection plugin.
 select_bluegene_la_SOURCES = select_bluegene.c \
+				bgl_job.c bgl_job.h \
 				bluegene.c bluegene.h \
 				state_test.c state_test.h \
 				partition_sys.c partition_sys.h
