Split bgl_job module in two: one to place job on nodes and the other to perform job startup and termination,

--- a/trunk/src/plugins/select/bluegene/Makefile.am
+++ b/trunk/src/plugins/select/bluegene/Makefile.am
@@ -12,7 +12,8 @@ pkglib_LTLIBRARIES = select_bluegene.la
 
 # Blue Gene node selection plugin.
 select_bluegene_la_SOURCES = select_bluegene.c \
-				bgl_job.c bgl_job.h \
+				bgl_job_place.c bgl_job_place.h \
+				bgl_job_run.c bgl_job_run.h \
 				bluegene.c bluegene.h \
 				state_test.c state_test.h \
 				partition_sys.c partition_sys.h
