redo and grid configuration work.

--- a/trunk/src/partition_allocator/Makefile.am
+++ b/trunk/src/partition_allocator/Makefile.am
@@ -6,15 +6,15 @@ AUTOMAKE_OPTIONS = foreign
 INCLUDES = -I$(top_srcdir) 
 
 #to build the executable
-# bin_PROGRAMS = partition_allocator
+bin_PROGRAMS = partition_allocator
 
-# partition_allocator_SOURCES = partition_allocator.c partition_allocator.h
+partition_allocator_SOURCES = partition_allocator.c partition_allocator.h
 
-# partition_allocator_LDADD = \
-# 	$(top_builddir)/src/common/libcommon.la -lpthread \
-# 	$(top_builddir)/src/api/libslurm.la
+partition_allocator_LDADD = \
+	$(top_builddir)/src/common/libcommon.la -lpthread \
+	$(top_builddir)/src/api/libslurm.la
 
-# partition_allocator_LDFLAGS = -export-dynamic -lm $(CMD_LDFLAGS)
+partition_allocator_LDFLAGS = -export-dynamic -lm $(CMD_LDFLAGS)
 
 # making a .la
 lib_LTLIBRARIES = libpartition_allocator.la 
