Add sayMessage.h to distribution (required for BlueGene systems).

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -23,7 +23,8 @@ EXTRA_DIST =			\
 pkginclude_HEADERS =		\
 	slurm/bnr.h		\
 	slurm/slurm.h 		\
-	slurm/slurm_errno.h
+	slurm/slurm_errno.h	\
+	sayMessage.h
 
 MAINTAINERCLEANFILES = 					\
 	aclocal.m4 config.guess 			\
