--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -239,7 +239,7 @@ fi
 
 %changelog
 * Tue Nov 16 2004 Morris Jette <jette1@llnl.gov>
-- Added sched_hold plugin
+- added sched_hold plugin
 * Wed Oct 13 2004 Morris Jette <jette1@llnl.gov>
 - added new package "bluegene" for select_bluegene.so
 * Fri Oct 01 2004 Mark Grondona <mgrondona@llnl.gov>
@@ -248,7 +248,7 @@ fi
 - don't allow rpm to strip binaries since this breaks interface to parallel
   debuggers.
 * Thu Sep 29 2004 Morris Jette <jette1@llnl.gov>
-- Added select_linear.so plugin
+- added select_linear.so plugin
 * Wed Aug 04 2004 Mark Grondona <mgrondona@llnl.gov>
 - don't allow rpm to strip binaries since this breaks interface to parallel
   debuggers.
