--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -241,7 +241,7 @@ fi
 * Tue Nov 16 2004 Morris Jette <jette1@llnl.gov>
 - added sched_hold plugin
 * Wed Oct 13 2004 Morris Jette <jette1@llnl.gov>
-- added new package "bluegene" for select_bluegene.so
+- added new package, bluegene, for select_bluegene.so
 * Fri Oct 01 2004 Mark Grondona <mgrondona@llnl.gov>
 - don't delete and add service in %post
 * Wed Aug 04 2004 Mark Grondona <mgrondona@llnl.gov>
