Clean up bluegene header files. Make bluegene plugin variable "bgl" local instead of global. Remove slurm_rm_free_BGL() and directly use _rm_free_BGL() now that it works.

--- a/trunk/src/plugins/select/bluegene/Makefile.am
+++ b/trunk/src/plugins/select/bluegene/Makefile.am
@@ -17,7 +17,7 @@ select_bluegene_la_SOURCES = select_bluegene.c \
 				bluegene.c bluegene.h \
 				state_test.c state_test.h \
 				bgl_switch_connections.c \
-				partition_sys.c partition_sys.h
+				partition_sys.c
 
 select_bluegene_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
 
